syntax = "proto2";
package proto.vision;

//Not recognizing these files? 
import "messages_robocup_ssl_detection.proto";
import "messages_robocup_ssl_geometry.proto";

message SSL_WrapperPacket {
  optional SSL_DetectionFrame detection = 1;
  optional SSL_GeometryData geometry = 2;
}
